--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 input[type="email"] {
@@ -52,6 +52,8 @@ body {
   font-family: var(--ff-body);
   background-image: var(--linear-gradient-light);
 }
+
+/* Content Section */
 
 .content {
   background-image: url("../images/bg-pattern-desktop.svg");
@@ -71,12 +73,14 @@ body {
 .content .content__text {
   padding: var(--page-padding);
   text-align: center;
+  margin-top: 3rem;
 }
 
 .content .content__text h1 {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
-  font-weight: 700;
+  font-size: 3.5rem;
+  font-weight: 600;
 }
 
 .content .content__text h1 span {
@@ -84,10 +88,52 @@ body {
   color: var(--primary-desaturated-red);
 }
 
+.content .content__text p {
+  color: var(--primary-desaturated-red);
+  /* font-size: 0.9rem; */
+  line-height: 1.5;
+  margin: 2rem 0;
+}
+
+form .form-container {
+  border: 1.5px solid var(--primary-desaturated-red);
+  border-radius: 2rem;
+  position: relative;
+  overflow: hidden;
+}
+
+form .form-container input {
+  padding: 1.3rem 0 1.3rem 2rem;
+  width: 100%;
+  outline: none !important;
+  border: none;
+  font-size: 1.1rem;
+}
+
+form .form-container input::placeholder {
+  color: var(--primary-desaturated-red);
+}
+
+form .form-container button {
+  position: absolute;
+  border: 1px solid red;
+  border-radius: 3rem;
+  /* top: 50%;
+  right: 0; */
+  position: absolute;
+  top: 50%;
+  right: -2px;
+  transform: translate(-0%, -50%);
+  padding: 1.3rem 2.2rem;
+  background-color: red;
+}
+
 /* Footer */
 .attribution {
   font-size: 0.8rem;
   text-align: center;
+  padding: 2rem 9%;
+  line-height: 1.5;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
